2000-09-08  Jeff Freedman  <jeff@patches.simutech.com>

	* Split rendering routines off into 'gamerend.cc'.
	* Added Game_window::get_party().

2000-09-08  Tristan Tarrant  <nadir@users.sourceforge.net>

	* vgafile.*: Allow empty initialization constructor and implement 
	load() methods for most classes
	* autoarray.h: Implement a set_size() method and an empty constructor
	* gamewin.cc: Moved all file loading/initialization from constructor
	to init_files() method
	* exult.cc: Call init_files() appropriately
	* data/quotes.txt: Make quotes fit
	* audio/Mixer.cc: No need to be so verbose even if DEBUG is set

2000-09-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Schedules:  Duel, kid_games, wander, mine, farm.
	* Dragging:  Don't drag until mouse has moved > 2 pixels.

2000-09-06  Jeff Freedman  <jeff@patches.simutech.com>

	* More schedules:  Waiter, thief, preach, eat_at_inn.

2000-09-04  Tristan Tarrant  <nadir@users.sourceforge.net>

	* files/utils.*: Added get_system_path() for remapping virtual paths
	to real ones. Modified U7open() to use new method. Implement U7remove()
	to enable similar functionality for removing files.
	* fnames.h: Remapped all names to use the new notation for virtual paths
	* game.cc: Clean up construction.
	* exult.cc: Setup virtual paths
	* configure.in: Better debug flags

2000-09-04  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Npc_actor): Set 1st-day schedule after you've talked
	to the NPC.  Removed old logic from gameclk.cc.

2000-09-03  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Npc_actor): Skip schedule actions if NPC is in a
	chunk that hasn't yet been read in fully.

2000-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Better sleeping.  Detects occupied beds too.
	* Fixed ship/sail bug.

2000-08-31  Tristan Tarrant  <nadir@users.sourceforge.net>

	* files/databuf.h: Added write() method to DataSources
	* tools/expack.cc: Implemented FLEX creation
	* tools/Makefile.am: Removed 'txt2cc' from build