@@ -71,7 +71,8 @@ Game_window::Game_window
 	    effects(0), open_gumps(0), num_faces(0), last_face_shown(-1),
 	    conv_choices(0), render_seq(0), painted(0), focus(1), 
 	    teleported(0), 
-	    moving_barge(0), main_actor(0), skip_above_actor(31), npcs(0),
+	    moving_barge(0), main_actor(0), skip_above_actor(31), 
+	    in_dungeon(0), npcs(0),
 	    monster_info(0), 
 	    palette(-1), brightness(100), user_brightness(100), faded_out(0),
 	    dragging(0), dragging_save(0),
